# week24-assignment

./: logfile
assignment-week24/: app.py  homes.csv  import-command.txt  logfile  models.py  pyproject.toml  schemas.py
assignment-week24/migrations/versions/: 64f45beb9698_.py
