[tool.poetry]
name = "assignment-week24"
version = "0.1.0"
description = ""
authors = ["Alan Teoh <alan_teoh@dell.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
psycopg2 = "^2.8"
flask-sqlalchemy = "^2.4"
marshmallow-sqlalchemy = "^0.19.0"
flask-migrate = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
